# local-logger

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  flake.nix  pyproject.toml  test.sh
benches/: local_logger_bench.rs
benches/common/: mod.rs
nix/: package.nix
nix/modules/: darwin-service.nix  local-logger.nix  nixos-service.nix
packaging/macos/: build-pkg.sh
packaging/macos/resources/: conclusion.html  welcome.html
packaging/macos/scripts/: postinstall  preinstall
packaging/macos/uninstall/: local-logger-uninstall.sh
packaging/nix/: package.nix
packaging/nix/modules/: darwin-service.nix  default.nix  home-manager.nix  local-logger.nix  nixos-service.nix
packaging/scripts/: detect-conflicts.sh  install-ca-cert.sh
src/: certificate_manager.rs  claude_config.rs  jsonl_tracing_layer.rs  lib.rs  log_writer.rs  main.rs  proxy_config.rs  proxy_server.rs  schema.rs  tail_reader.rs
tests/: integration_tests.rs  performance.rs  property.proptest-regressions  property.rs
tests/common/: mod.rs
tests/integration/: hook.rs  mod.rs  proxy.rs
